ECommerceApp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modularmonolith
  labels:
    app: modularmonolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modularmonolith
  template:
    metadata:
      labels:
        app: modularmonolith
    spec:
      containers:
        - name: modularmonolith
          image: modularmonolith:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
