ECommerceApp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modularmonolith-service
  labels:
    app: modularmonolith  # This label is crucial for ServiceMonitor discovery
spec:
  type: ClusterIP
  selector:
    app: modularmonolith
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
